...
    WikiItem(
      id: 'access',
      title: 'Acessando a plataforma',
      content:
          '''Para acessar a plataforma, será necessário inserir o seu e-mail e senha cadastrados ou passados anteriormente.

Após inserir seus dados nos campos, clique em "Acessar".

Se o seu usuário estiver aprovado pelo Gestor da empresa, você será redirecionado para a tela inicial do aplicativo.

Se o seu usuário ainda não estiver aprovado pelo Gestor da empresa, entre em contato com o Gestor da sua empresa e peça para aprová-lo.''',
    ),
    WikiItem(
...
    ),
    WikiItem(
      id: 'new_budget',
      title: 'Gerando um novo orçamento',
      content: '''Para gerar um novo orçamento:

1. Na página inicial, clique no botão "Novo Orç.";
2. Preencha as Informações Iniciais (Cidade, Responsável, E-mail e Telefone) e clique em "Próximo";
3. Configure os dados do censo escolar da cidade (se aplicável);
4. Selecione as categorias e os produtos desejados;
5. Revise as informações do orçamento e clique em "Salvar Alterações".''',
    ),
    WikiItem(
      id: 'edit_budget',
      title: 'Editando um orçamento existente',
      content: '''Para editar um orçamento existente:

...
